k8s/koiner/prod/dapp/koiner-dapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: koiner-dapp
  name: koiner-dapp
  namespace: koiner-dapp
spec:
  replicas: 1
  selector:
    matchLabels:
      service: koiner-dapp
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        service: koiner-dapp
    spec:
      containers:
        - name: koiner-dapp
          image: elimbatido/koiner-dapp:v0.2.13
          ports:
            - containerPort: 80
          readinessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /#/health
              port: 80
          imagePullPolicy: Always
      serviceAccountName: default
